--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,7 @@ services:
         gemma-2-27b@Gemma,\
         gemma-2-9b@Gemma,\
         learnlm-1.5-pro-experimental@Google,\
+        gemini-2.5-pro-exp-03-25@Google,\
         gemini-2.0-pro-exp-02-05@Google,\
         gemini-1.5-pro-latest@Google,\
         gemini-2.0-flash-thinking-exp-01-21@Google,\
@@ -72,14 +73,15 @@ services:
         qwen2.5-72b-instruct@Qwen,\
         llama-3.3-70b-instruct@Meta,\
         c4ai-command-r-plus-08-2024@CohereForAI,\
-        qwq-32b-preview@Qwen,\
         llama-3.1-nemotron-70b-instruct-hf@Meta,\
         qwen2.5-coder-32b-instruct@Qwen,\
         llama-3.2-11b-vision-instruct@Meta,\
         hermes-3-llama-3.1-8b@Meta,\
         mistral-nemo-instruct-2407@MistralAI,\
         phi-3.5-mini-instruct@Microsoft,\
-        deepseek-r1-distill-qwen-32b@Qwen"
+        deepseek-r1-distill-qwen-32b@Qwen,\
+        qwq-32b@Qwen,\
+        gemma-3-27b-it@Gemma"
     env_file:
       - .env
     networks:
