--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,11 +41,13 @@ services:
         gemma-2-27b@Gemma,\
         gemma-2-9b@Gemma,\
         learnlm-1.5-pro-experimental@Google,\
-        gemini-2.5-pro-exp-03-25@Google,\
-        gemini-2.0-pro-exp-02-05@Google,\
-        gemini-1.5-pro-latest@Google,\
-        gemini-2.0-flash-thinking-exp-01-21@Google,\
+        learnlm-2.0-flash-experimental@Google,\
+        gemini-2.5-pro@Google,\
+        gemini-2.5-flash-preview-04-17@Google,\
+        gemini-2.0-flash-exp@Google,\
         gemini-2.0-flash@Google,\
+        gemini-2.0-flash-lite@Google,\
+        gemini-1.5-pro-latest@Google,\
         gemini-1.5-flash-latest@Google,\
         gemini-1.5-flash-8b-latest@Google,\
         claude-3-7-sonnet@Anthropic,\
@@ -77,14 +79,14 @@ services:
         llama-3.3-70b-instruct@Meta,\
         c4ai-command-r-plus-08-2024@CohereForAI,\
         llama-3.1-nemotron-70b-instruct-hf@Meta,\
-        qwen2.5-coder-32b-instruct@Qwen,\
-        llama-3.2-11b-vision-instruct@Meta,\
         hermes-3-llama-3.1-8b@Meta,\
-        mistral-nemo-instruct-2407@MistralAI,\
-        phi-3.5-mini-instruct@Microsoft,\
         deepseek-r1-distill-qwen-32b@Qwen,\
         qwq-32b@Qwen,\
-        gemma-3-27b-it@Gemma"
+        gemma-3-27b-it@Gemma,\
+        qwen3-235b-a22b@Qwen,\
+        mistral-small-3.1-24b-instruct-2503@MistralAI,\
+        qwen2.5-vl-32b-instruct@Qwen,\
+        phi-4@Microsoft"
     env_file:
       - .env
     networks:
