--- a/requirements.txt
+++ b/requirements.txt
@@ -4,25 +4,25 @@
 #
 #    pip-compile
 #
-aiohappyeyeballs==2.4.6
+aiofiles==24.1.0
+    # via webscout
+aiohappyeyeballs==2.6.1
     # via aiohttp
-aiohttp==3.11.13
+aiohttp==3.12.13
     # via
     #   -r requirements.in
-    #   g4f
+    #   webscout
 aiosignal==1.3.2
     # via aiohttp
 annotated-types==0.7.0
     # via pydantic
-anyio==4.8.0
+anyio==4.9.0
     # via
     #   httpx
-    #   sse-starlette
+    #   openai
     #   starlette
     #   watchfiles
-appdirs==1.4.4
-    # via webscout
-attrs==25.1.0
+attrs==25.3.0
     # via
     #   aiohttp
     #   outcome
@@ -32,12 +32,15 @@ beautifulsoup4==4.13.3
     # via
     #   markdownify
     #   seleniumbase
-    #   webscout
 behave==1.2.6
     # via seleniumbase
 brotli==1.1.0
-    # via g4f
-certifi==2025.1.31
+    # via webscout
+bson==0.5.10
+    # via webscout
+cachetools==5.5.2
+    # via google-auth
+certifi==2025.6.15
     # via
     #   curl-cffi
     #   httpcore
@@ -53,78 +56,115 @@ charset-normalizer==3.4.1
     # via
     #   requests
     #   seleniumbase
-click==8.1.8
+click==8.2.1
     # via
     #   rich-toolkit
     #   typer
     #   uvicorn
-    #   webscout
-clipman==3.3.1
+cloudscraper==1.2.71
     # via webscout
 colorama==0.4.6
     # via
-    #   halo
-    #   log-symbols
     #   seleniumbase
-cssselect==1.2.0
+    #   webscout
+cssselect==1.3.0
     # via seleniumbase
-curl-cffi==0.9.0
+curl-cffi==0.11.4
     # via webscout
-dbus-next==0.2.3
-    # via clipman
+deprecated==1.2.18
+    # via nodriver
+distro==1.9.0
+    # via openai
 dnspython==2.7.0
     # via email-validator
-docstring-inheritance==2.2.2
-    # via webscout
 email-validator==2.2.0
     # via fastapi
-environs==14.1.1
+environs==14.2.0
     # via -r requirements.in
-exceptiongroup==1.2.2
+exceptiongroup==1.3.0
     # via seleniumbase
 execnet==2.1.1
     # via
     #   pytest-xdist
     #   seleniumbase
-fake-useragent==2.0.3
+fake-useragent==2.2.0
     # via -r requirements.in
-fastapi[standard]==0.115.11
+fastapi[standard]==0.115.13
     # via -r requirements.in
 fastapi-cli[standard]==0.0.7
     # via fastapi
 fasteners==0.19
     # via seleniumbase
-filelock==3.17.0
+filelock==3.18.0
     # via
+    #   huggingface-hub
     #   seleniumbase
-    #   tldextract
-frozenlist==1.5.0
+frozenlist==1.7.0
     # via
     #   aiohttp
     #   aiosignal
-g4f==0.4.7.7
+fsspec==2025.5.1
+    # via
+    #   gradio-client
+    #   huggingface-hub
+google-ai-generativelanguage==0.6.15
+    # via google-generativeai
+google-api-core[grpc]==2.25.1
+    # via
+    #   google-ai-generativelanguage
+    #   google-api-python-client
+    #   google-generativeai
+google-api-python-client==2.173.0
+    # via google-generativeai
+google-auth==2.40.3
+    # via
+    #   google-ai-generativelanguage
+    #   google-api-core
+    #   google-api-python-client
+    #   google-auth-httplib2
+    #   google-generativeai
+google-auth-httplib2==0.2.0
+    # via google-api-python-client
+google-generativeai==0.8.5
     # via webscout
-googlebard1==2.1.4
+googleapis-common-protos==1.70.0
+    # via
+    #   google-api-core
+    #   grpcio-status
+gradio-client==1.10.3
     # via webscout
+grpcio==1.73.0
+    # via
+    #   google-api-core
+    #   grpcio-status
+grpcio-status==1.71.0
+    # via google-api-core
 h11==0.14.0
     # via
     #   httpcore
     #   seleniumbase
     #   uvicorn
     #   wsproto
-halo==0.0.31
+hf-xet==1.1.4
+    # via huggingface-hub
+html5lib==1.1
     # via webscout
-helpingai-t2==0.5
-    # via webscout
-httpcore==1.0.7
+httpcore==1.0.8
     # via httpx
+httplib2==0.22.0
+    # via
+    #   google-api-python-client
+    #   google-auth-httplib2
 httptools==0.6.4
     # via uvicorn
-httpx[socks]==0.28.1
+httpx==0.28.1
     # via
     #   fastapi
-    #   googlebard1
-    #   poe-api-wrapper
+    #   gradio-client
+    #   ollama
+    #   openai
+huggingface-hub==0.33.0
+    # via gradio-client
 idna==3.10
     # via
     #   anyio
@@ -132,70 +172,75 @@ idna==3.10
     #   httpx
     #   requests
     #   seleniumbase
-    #   tldextract
     #   trio
     #   yarl
 importlib-resources==6.5.2
     # via wasmtime
-iniconfig==2.0.0
+iniconfig==2.1.0
     # via
     #   pytest
     #   seleniumbase
-jinja2==3.1.5
+jinja2==3.1.6
     # via
     #   fastapi
     #   pytest-html
     #   seleniumbase
-log-symbols==0.0.14
-    # via halo
-loguru==0.7.3
-    # via poe-api-wrapper
-lxml==5.3.1
+jiter==0.10.0
+    # via openai
+lxml==5.4.0
     # via webscout
 markdown-it-py==3.0.0
     # via
     #   rich
     #   seleniumbase
-markdownify==1.0.0
+markdownify==1.1.0
     # via webscout
 markupsafe==3.0.2
     # via
     #   jinja2
     #   seleniumbase
-marshmallow==3.26.1
+marshmallow==4.0.0
     # via environs
 mdurl==0.1.2
     # via
     #   markdown-it-py
     #   seleniumbase
+mistune==3.1.3
+    # via webscout
 mouseinfo==0.1.3
     # via pyautogui
-multidict==6.1.0
+mss==10.0.0
+    # via nodriver
+multidict==6.5.0
     # via
     #   aiohttp
     #   yarl
-mycdp==1.1.0
+mycdp==1.2.0
     # via seleniumbase
 nest-asyncio==1.6.0
-    # via
-    #   g4f
-    #   webscout
-numpy==2.2.3
+    # via webscout
+nodriver==0.46.1
+    # via webscout
+numpy==2.3.0
     # via -r requirements.in
-orjson==3.10.15
+ollama==0.5.1
+    # via webscout
+openai==1.88.0
+    # via webscout
+orjson==3.10.18
     # via webscout
 outcome==1.3.0.post0
     # via
     #   seleniumbase
     #   trio
     #   trio-websocket
-packaging==24.2
+packaging==25.0
     # via
-    #   marshmallow
+    #   gradio-client
+    #   huggingface-hub
     #   pytest
     #   pytest-rerunfailures
     #   seleniumbase
-    #   webdriver-manager
 parameterized==0.9.0
     # via seleniumbase
 parse==1.20.2
@@ -207,40 +252,55 @@ parse-type==0.6.4
     # via
     #   behave
     #   seleniumbase
-pdbp==1.6.1
+pdbp==1.7.0
     # via seleniumbase
-pillow==11.1.0
+pillow==11.2.1
     # via
     #   -r requirements.in
     #   pyscreeze
-platformdirs==4.3.6
+    #   webscout
+platformdirs==4.3.8
     # via seleniumbase
-playsound==1.3.0
-    # via webscout
 pluggy==1.5.0
     # via
     #   pytest
     #   seleniumbase
-poe-api-wrapper==1.3.6
-    # via webscout
-prompt-toolkit==3.0.50
-    # via googlebard1
-propcache==0.3.0
+propcache==0.3.2
     # via
     #   aiohttp
     #   yarl
+proto-plus==1.26.1
+    # via
+    #   google-ai-generativelanguage
+    #   google-api-core
+protobuf==5.29.5
+    # via
+    #   google-ai-generativelanguage
+    #   google-api-core
+    #   google-generativeai
+    #   googleapis-common-protos
+    #   grpcio-status
+    #   proto-plus
+psutil==7.0.0
+    # via webscout
+pyasn1==0.6.1
+    # via
+    #   pyasn1-modules
+    #   rsa
+pyasn1-modules==0.4.2
+    # via google-auth
 pyautogui==0.9.54
     # via -r requirements.in
 pycparser==2.22
     # via cffi
-pycryptodome==3.21.0
-    # via g4f
-pydantic==2.10.6
+pydantic==2.11.7
     # via
     #   -r requirements.in
     #   fastapi
-    #   webscout
-pydantic-core==2.27.2
+    #   google-generativeai
+    #   ollama
+    #   openai
+pydantic-core==2.33.2
     # via pydantic
 pygetwindow==0.0.9
     # via pyautogui
@@ -255,17 +315,19 @@ pynose==1.5.4
     # via seleniumbase
 pyotp==2.9.0
     # via seleniumbase
+pyparsing==3.2.3
+    # via
+    #   cloudscraper
+    #   httplib2
 pyperclip==1.9.0
     # via mouseinfo
 pyrect==0.2.0
     # via pygetwindow
-pyreqwest-impersonate==0.5.3
-    # via webscout
 pyscreeze==1.0.1
     # via pyautogui
 pysocks==1.7.1
     # via urllib3
-pytest==8.3.4
+pytest==8.3.5
     # via
     #   pytest-html
     #   pytest-metadata
@@ -285,12 +347,12 @@ pytest-rerunfailures==15.0
     # via seleniumbase
 pytest-xdist==3.6.1
     # via seleniumbase
-python-dotenv==1.0.1
+python-dateutil==2.9.0.post0
+    # via bson
+python-dotenv==1.1.0
     # via
     #   environs
     #   uvicorn
-    #   webdriver-manager
-    #   webscout
 python-multipart==0.0.20
     # via fastapi
 python-xlib==0.33
@@ -304,64 +366,58 @@ pytweening==1.2.0
     # via pyautogui
 pyyaml==6.0.2
     # via
+    #   huggingface-hub
     #   seleniumbase
     #   uvicorn
     #   webscout
-regex==2024.11.6
-    # via tiktoken
 requests==2.32.3
     # via
-    #   g4f
-    #   helpingai-t2
-    #   requests-file
+    #   cloudscraper
+    #   google-api-core
+    #   huggingface-hub
     #   requests-toolbelt
     #   seleniumbase
-    #   tiktoken
-    #   tldextract
-    #   webdriver-manager
     #   webscout
-requests-file==2.1.0
-    # via tldextract
 requests-toolbelt==1.0.0
-    # via poe-api-wrapper
-rich==13.9.4
+    # via cloudscraper
+rich==14.0.0
     # via
-    #   googlebard1
     #   rich-toolkit
     #   seleniumbase
     #   typer
     #   webscout
-rich-toolkit==0.13.2
+rich-toolkit==0.14.7
     # via fastapi-cli
-ruamel-yaml==0.18.10
+rsa==4.9.1
+    # via google-auth
+ruamel-yaml==0.18.14
     # via -r requirements.in
 ruamel-yaml-clib==0.2.12
     # via ruamel-yaml
 sbvirtualdisplay==1.4.0
     # via seleniumbase
-selenium==4.29.0
-    # via
-    #   seleniumbase
-    #   webscout
-seleniumbase==4.35.2
+selenium==4.30.0
+    # via seleniumbase
+seleniumbase==4.36.5
     # via -r requirements.in
 shellingham==1.5.4
     # via typer
 six==1.17.0
     # via
     #   behave
-    #   halo
+    #   bson
+    #   html5lib
     #   markdownify
     #   parse-type
+    #   python-dateutil
     #   python-xlib
     #   seleniumbase
 sniffio==1.3.1
     # via
     #   anyio
+    #   openai
     #   seleniumbase
     #   trio
-socksio==1.0.0
-    # via httpx
 sortedcontainers==2.4.0
     # via
     #   seleniumbase
@@ -370,32 +426,19 @@ soupsieve==2.6
     # via
     #   beautifulsoup4
     #   seleniumbase
-spinners==0.0.24
-    # via halo
-sse-starlette==2.2.1
-    # via webscout
-starlette==0.46.0
-    # via
-    #   fastapi
-    #   sse-starlette
+starlette==0.46.2
+    # via fastapi
 tabcompleter==1.4.0
     # via
     #   pdbp
     #   seleniumbase
-termcolor==2.5.0
-    # via
-    #   halo
-    #   webscout
-tiktoken==0.9.0
-    # via webscout
-tldextract==5.1.3
-    # via webscout
 tls-client==1.0.1
-    # via
-    #   -r requirements.in
-    #   webscout
+    # via -r requirements.in
 tqdm==4.67.1
-    # via webscout
+    # via
+    #   google-generativeai
+    #   huggingface-hub
+    #   openai
 trio==0.29.0
     # via
     #   selenium
@@ -405,58 +448,73 @@ trio-websocket==0.12.2
     # via
     #   selenium
     #   seleniumbase
-typer==0.15.2
+typer==0.16.0
     # via fastapi-cli
-typing-extensions==4.12.2
+typing-extensions==4.14.0
     # via
     #   anyio
     #   beautifulsoup4
+    #   exceptiongroup
     #   fastapi
+    #   google-generativeai
+    #   gradio-client
+    #   huggingface-hub
+    #   openai
     #   pydantic
     #   pydantic-core
     #   rich-toolkit
     #   selenium
     #   seleniumbase
     #   typer
+    #   typing-inspection
+typing-inspection==0.4.1
+    # via pydantic
+uritemplate==4.2.0
+    # via google-api-python-client
 urllib3[socks]==2.3.0
     # via
     #   requests
     #   selenium
     #   seleniumbase
-uvicorn[standard]==0.34.0
+uvicorn[standard]==0.34.3
     # via
     #   fastapi
     #   fastapi-cli
 uvloop==0.21.0
     # via uvicorn
-wasmtime==30.0.0
+wasmtime==33.0.0
     # via -r requirements.in
-watchfiles==1.0.4
+watchfiles==1.1.0
     # via uvicorn
-wcwidth==0.2.13
-    # via prompt-toolkit
-webdriver-manager==4.0.2
-    # via webscout
-webscout==3.5
+webencodings==0.5.1
+    # via html5lib
+webscout==8.3.2
     # via -r requirements.in
 websocket-client==1.8.0
     # via
-    #   helpingai-t2
-    #   poe-api-wrapper
     #   selenium
     #   seleniumbase
-websockets==15.0
+    #   webscout
+websockets==15.0.1
     # via
+    #   gradio-client
+    #   nodriver
     #   seleniumbase
     #   uvicorn
 wheel==0.45.1
-    # via seleniumbase
+    # via
+    #   seleniumbase
+    #   webscout
+wrapt==1.17.2
+    # via deprecated
 wsproto==1.2.0
     # via
     #   seleniumbase
     #   trio-websocket
-yarl==1.18.3
+yarl==1.20.1
     # via aiohttp
+zstandard==0.23.0
+    # via webscout
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
