--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,8 @@ GOOGLE_API_KEY=""
 # API_HOST="your custom host and port"
 # OPENAI_API_URL="your custom host and port"
 
-HUGGING_CHAT_TOKEN="from https://huggingface.co/chat/ conversation API cookie 'hf-chat' value"
+HUGGING_CHAT="from https://huggingface.co/chat/ conversation API cookie 'hf-chat' value"
+HUGGING_CHAT_TOKEN="from https://huggingface.co/chat/ conversation API cookie 'token' value"
 
 USE_CHATGPT_WEB=1
 CHATGPT_WEB_SESSION_TOKEN="from https://chatgpt.com/api/auth/session cookie '__Secure-next-auth.session-token' value"
