--- a/requirements.in
+++ b/requirements.in
@@ -1,14 +1,13 @@
 fastapi[standard]
 pydantic>=2.7
 fake-useragent
-webscout
-aiohttp>=3.10.11
+webscout==8.3.7
 tls-client
 pillow
 environs
 ruamel.yaml
-seleniumbase==4.36.5
-python3-xlib
 pyautogui
 numpy
 wasmtime
+# seleniumbase==4.36.5
+# python3-xlib
